Fix: Disabled Class for Scrollbar
Fix: Disabled Class for Scrollbar

--- a/ch5-button-list/scss/_button-list-default.scss
+++ b/ch5-button-list/scss/_button-list-default.scss
@@ -78,3 +78,10 @@ ch5-button-list {
   pointer-events: none;
   opacity: $ch5-button-list-disabled-opacity;
 }
+
+.ch5-button-list.ch5-button-list--disabled {
+  &~.scrollbar-container {
+    pointer-events: none;
+    opacity: $ch5-button-list-disabled-opacity;
+  }
+}
